[package]
name = "parser-c-macro"
version = "0.1.0"
authors = ["Tim Ryan <tim@timryan.org>"]
description = "Helper macros for parser-c"
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.10.5", features = [ "full" ] }
quote = "0.3.10"
regex = "0.2.2"
lazy_static = "0.2.8"
