Name:           language-c-test
Version:        0.6.0
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENSE
Copyright:      LICENSE
Author:         AUTHORS
Maintainer:     benedikt.huber@gmail.com
Stability:      experimental
Homepage:       http://visq.github.io/language-c/
Bug-reports:    https://github.com/visq/language-c/issues/

Synopsis:       Test Framework - Analysis and generation of C code
Description:    Language C is a haskell library for the analysis and generation of C code.
Category:       Language

Executable CEquiv
   main-is: src/CEquiv.hs
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CParse
   main-is: src/CParse.hs
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CTest
   main-is: src/CTest.hs
   build-depends: base, filepath, mtl, pretty, syb, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CRoundTrip
   main-is: src/CRoundTrip.hs
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable CheckGccArgs
   main-is: src/CheckGccArgs.hs
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable RenderTests
   main-is: src/RenderTests.hs
   build-depends: base, filepath, mtl, pretty, containers, directory, xhtml, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Executable ReportFatal
   main-is: src/ReportFatal.hs
   build-depends: base, filepath, mtl, pretty, language-c, language-c-test
   if impl(ghc >= 8.0)
     ghc-options:    -rtsopts -Wall -Wno-redundant-constraints
   else
     ghc-options:    -rtsopts -Wall

Library
    Extensions: CPP, DeriveDataTypeable, PatternGuards, BangPatterns, ExistentialQuantification, GeneralizedNewtypeDeriving, ScopedTypeVariables
    Build-Depends: base >= 3 && < 5, process, directory, array, containers, pretty, filepath, bytestring >= 0.9.0, syb, mtl, language-c >= 0.5.1
    Hs-Source-Dirs: src
    if impl(ghc >= 8.0)
      ghc-options:    -Wall -Wno-redundant-constraints
    else
      ghc-options:    -Wall
    Exposed-Modules:
                    Language.C.Test.Environment
                    Language.C.Test.Framework
                    Language.C.Test.GenericAST
                    Language.C.Test.Measures
                    Language.C.Test.ParseTests
                    Language.C.Test.TestMonad

-- test description
Test-Suite language-c-harness
    type:       exitcode-stdio-1.0
    main-is:    harness/run-harness.hs
    build-depends: base, language-c, directory, process, filepath, language-c-test